<resources>
    <string name="app_name">retrofitmoshiexample</string>
    <string name="nav_header_title">Poladrone</string>
    <string name="nav_header_subtitle">amir.farhan@poladrone.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_userdata">User Data</string>
    <string name="menu_retrievewpSuccess">Retrieve Waypoints Success</string>
    <string name="menu_retrievewpFailed">Retrieve Waypoints Failed</string>
    <string name="menu_updateHandShakeSuccess">Update Handshake Success</string>
    <string name="menu_updateHandShakeFailed">Update Handshake Failed</string>
    <string name="menu_retrievewpNotFound">Retrieve Waypoints Not Found</string>
    <string name="menu_auth">Auth</string>

    <string name="btn_callapi">Call API</string>
    <string name="btn_callapitryagain">Failed. Try again?</string>
    <string name="btn_loading">Loading…</string>
    <string name="label_req">Request URL and Body</string>
    <string name="label_res_raw">Response Raw String</string>
    <string name="label_res_object">Parsed Response</string>
    <string name="label_res_specific">Specific Object</string>

    <string name="api_demo">https://afarhan.free.beeceptor.com/demo</string>
    <string name="api_userData">https://afarhan.free.beeceptor.com/requestUserData</string>
    <string name="api_userDataEncoded">https://afarhan.free.beeceptor.com/requestUserDataEncode</string>
    <string name="api_retrieveWpAiramapSuccess">https://airamapv093.azurewebsites.net/Oryctes/Retrieve?token=x3TKgxyb0uX5c4kwmwbdLAv96pbxXr/JCHfBV53Fc2Y=</string>
    <string name="api_retrieveWpAiramapNotFound">https://airamapv093.azurewebsites.net/Oryctes/Retrieve?token=LVRxVEb39BkOqiwh6Gq6uGqU46S7jCJmx0c9dvzfUTM=</string>
    <string name="api_retrieveWpAiramapFailed">https://airamapv093.azurewebsites.net/Oryctes/Retrieve?token=x3TKgxyb0uX5c4kwmwbdLAv96pbxXr/JCHfBV53Fc2Y=a</string>
    <string name="api_authAiramap">https://airamapv093.azurewebsites.net/Oryctes/Auth?uuid=5643bfc7-cec0-4977-be25-bbf36f41aa2a</string>
    <string name="api_updateHandshake">https://airamapv093.azurewebsites.net/Oryctes/UpdateHandShake</string>
</resources>