<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userdata"
            android:title="@string/menu_userdata" />
        <item
            android:id="@+id/nav_retrievewaypointSuccess"
            android:title="@string/menu_retrievewpSuccess" />
        <item
            android:id="@+id/nav_retrievewaypointFail"
            android:title="@string/menu_retrievewpFailed" />
        <item
            android:id="@+id/nav_retrievewaypointNotFound"
            android:title="@string/menu_retrievewpNotFound" />
        <item
            android:id="@+id/nav_auth"
            android:title="@string/menu_auth" />
    </group>
</menu>